--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,7 @@ jobs:
                     swift package factory 
                     swift package factory FactoryPluginValidExampleTarget
             -   name: test-factory 
+                # check that none of the generated .swift files have changed
                 run: | 
                     swift build --target FactoryPluginValidExampleTarget
-                    git checkout master
+                    if [[ -z $(git status -s) ]]; then (exit 0); else (exit 1); fi
