--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,11 +41,14 @@ jobs:
                     /Library/Developer/Toolchains/swift-${{ matrix.swift }}.xctoolchain/usr/bin/swift --version
 
     build-linux:
-        runs-on: ${{ matrix.os }}
+        runs-on: ${{ matrix.os.runner }}
         strategy:
             matrix:
-                os: [ubuntu-22.04, ubuntu-20.04]
-                swift: [DEVELOPMENT-SNAPSHOT-2022-08-15-a]
+                os: 
+                    -   {runner: ubuntu-22.04, prefix: ubuntu2204, suffix: ubuntu22.04}
+                    -   {runner: ubuntu-20.04, prefix: ubuntu2004, suffix: ubuntu20.04}
+                swift: 
+                    -   DEVELOPMENT-SNAPSHOT-2022-08-15-a
         steps:
             -   uses: actions/checkout@v2
             
@@ -53,7 +56,7 @@ jobs:
                 uses: actions/cache@v2
                 with:
                     path: swift-${{ matrix.swift }}.tar.gz
-                    key: ${{ matrix.os }}:swift:${{ matrix.swift }}
+                    key: ${{ matrix.os.runner }}:swift:${{ matrix.swift }}
                     
             -   name: cache status
                 id:   cache_status
@@ -63,7 +66,7 @@ jobs:
             
             -   name: download swift toolchain 
                 if: steps.cache_status.outputs.files_exists == 'false'
-                run: curl https://download.swift.org/development/$(echo ${{ matrix.os }} | sed 's/[^a-zA-Z0-9]//g')/swift-${{ matrix.swift }}/swift-${{ matrix.swift }}-$(echo ${{ matrix.os }} | sed 's/[^a-zA-Z0-9\.]//g').tar.gz --output swift-${{ matrix.swift }}.tar.gz
+                run: curl https://download.swift.org/development/${{ matrix.os.prefix }}/swift-${{ matrix.swift }}/swift-${{ matrix.swift }}-${{ matrix.os.suffix }}.tar.gz --output swift-${{ matrix.swift }}.tar.gz
             
             -   name: set up swift
                 run: |
