--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,12 +7,17 @@ on:
         branches: [ master ]
 
 jobs:
-    build-macos:
+    macos-nightly:
         runs-on: ${{ matrix.os }}
+        name: ${{ matrix.os }} (${{ matrix.swift }})
+        env: 
+            SWIFT_TOOLCHAIN_DIRECTORY: /Library/Developer/Toolchains/swift-${{ matrix.swift }}.xctoolchain
         strategy:
             matrix:
-                os: [macos-12]
-                swift: [DEVELOPMENT-SNAPSHOT-2022-08-15-a]
+                os: 
+                    -   macos-12
+                swift: 
+                    -   DEVELOPMENT-SNAPSHOT-2022-08-15-a
         steps:
             -   uses: actions/checkout@v2
 
@@ -30,7 +35,10 @@ jobs:
             
             -   name: download swift toolchain 
                 if: steps.cache_status.outputs.files_exists == 'false'
-                run: curl https://download.swift.org/development/xcode/swift-${{ matrix.swift }}/swift-${{ matrix.swift }}-osx.pkg --output swift-${{ matrix.swift }}.pkg
+                run:   "curl https://download.swift.org/development/xcode/\
+                        swift-${{ matrix.swift }}/\
+                        swift-${{ matrix.swift }}-osx.pkg \
+                        --output swift-${{ matrix.swift }}.pkg"
             
             -   name: set up swift
                 run: |
@@ -38,41 +46,63 @@ jobs:
             
             -   name: build-factory
                 run: |
-                    /Library/Developer/Toolchains/swift-${{ matrix.swift }}.xctoolchain/usr/bin/swift --version
-
-    build-linux:
+                    $SWIFT_TOOLCHAIN_DIRECTORY/swift --version
+                    $SWIFT_TOOLCHAIN_DIRECTORY/swift build --product swift-package-factory 
+                    $SWIFT_TOOLCHAIN_DIRECTORY/swift build --product FactoryPlugin 
+            -   name: run-factory 
+                run: | 
+                    $SWIFT_TOOLCHAIN_DIRECTORY/swift package factory FactoryPluginValidExampleTarget
+            -   name: test-factory 
+                # check that none of the generated .swift files have changed
+                run: | 
+                    $SWIFT_TOOLCHAIN_DIRECTORY/swift build --target FactoryPluginValidExampleTarget
+                    if [[ -z $(git status -s) ]]; then (exit 0); else (exit 1); fi
+    
+    linux:
         runs-on: ${{ matrix.os.runner }}
+        name: ${{ matrix.os.runner }} (${{ matrix.swift.toolchain }})
         strategy:
             matrix:
                 os: 
-                    -   {runner: ubuntu-22.04, prefix: ubuntu2204, suffix: ubuntu22.04}
-                    -   {runner: ubuntu-20.04, prefix: ubuntu2004, suffix: ubuntu20.04}
+                    -   runner: ubuntu-22.04
+                        prefix: ubuntu2204
+                        suffix: ubuntu22.04
+                    -   runner: ubuntu-20.04
+                        prefix: ubuntu2004
+                        suffix: ubuntu20.04
                 swift: 
-                    -   DEVELOPMENT-SNAPSHOT-2022-08-15-a
+                    -   toolchain:  DEVELOPMENT-SNAPSHOT-2022-08-15-a
+                        branch:     development
         steps:
             -   uses: actions/checkout@v2
             
             -   name: cache swift toolchains
                 uses: actions/cache@v2
                 with:
-                    path: swift-${{ matrix.swift }}.tar.gz
-                    key: ${{ matrix.os.runner }}:swift:${{ matrix.swift }}
+                    path: swift-${{ matrix.swift.toolchain }}.tar.gz
+                    key: ${{ matrix.os.runner }}:swift:${{ matrix.swift.toolchain }}
                     
             -   name: cache status
                 id:   cache_status
                 uses: andstor/file-existence-action@v1
                 with:
-                    files: swift-${{ matrix.swift }}.tar.gz
+                    files: swift-${{ matrix.swift.toolchain }}.tar.gz
             
             -   name: download swift toolchain 
                 if: steps.cache_status.outputs.files_exists == 'false'
-                run: curl https://download.swift.org/development/${{ matrix.os.prefix }}/swift-${{ matrix.swift }}/swift-${{ matrix.swift }}-${{ matrix.os.suffix }}.tar.gz --output swift-${{ matrix.swift }}.tar.gz
+                run:   "curl https://download.swift.org/\
+                        ${{ matrix.swift.branch }}/\
+                        ${{ matrix.os.prefix }}/\
+                        swift-${{ matrix.swift.toolchain }}/\
+                        swift-${{ matrix.swift.toolchain }}-${{ matrix.os.suffix }}.tar.gz \
+                        --output swift-${{ matrix.swift.toolchain }}.tar.gz"
             
             -   name: set up swift
                 run: |
-                    mkdir -p $GITHUB_WORKSPACE/swift-${{ matrix.swift }}
-                    tar -xzf swift-${{ matrix.swift }}.tar.gz -C $GITHUB_WORKSPACE/swift-${{ matrix.swift }} --strip 1
-                    echo "$GITHUB_WORKSPACE/swift-${{ matrix.swift }}/usr/bin" >> $GITHUB_PATH
+                    mkdir -p $GITHUB_WORKSPACE/swift-${{ matrix.swift.toolchain }}
+                    tar -xzf swift-${{ matrix.swift.toolchain }}.tar.gz -C $GITHUB_WORKSPACE/swift-${{ matrix.swift.toolchain }} --strip 1
+                    echo "$GITHUB_WORKSPACE/swift-${{ matrix.swift.toolchain }}/usr/bin" >> $GITHUB_PATH
+            
             -   name: build-factory
                 run: |
                     swift --version
