--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,10 @@ jobs:
                     $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift build --product swift-package-factory 
                     $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift build --product FactoryPlugin 
             -   name: run-factory 
+                # need to (re)create empty swift file to satisfy the SPM
                 run: | 
                     rm Examples/ValidExamples/*.swift
+                    touch Examples/ValidExamples/Empty.swift
                     $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift package factory FactoryPluginValidExampleTarget
             -   name: test-factory 
                 # check that none of the generated .swift files have changed
@@ -110,8 +112,10 @@ jobs:
                     swift build --product swift-package-factory 
                     swift build --product FactoryPlugin 
             -   name: run-factory 
+                # need to (re)create empty swift file to satisfy the SPM
                 run: | 
                     rm Examples/ValidExamples/*.swift
+                    touch Examples/ValidExamples/Empty.swift
                     swift package factory FactoryPluginValidExampleTarget
             -   name: test-factory 
                 # check that none of the generated .swift files have changed
