--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
                     ln -s $SWIFT_TOOLCHAIN_DIRECTORY/usr/lib/swift/macosx/lib_InternalSwiftSyntaxParser.dylib .build/debug/lib_InternalSwiftSyntaxParser.dylib
                     rm Examples/ValidExamples/*.swift
                     touch Examples/ValidExamples/Empty.swift
-                    $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift package factory FactoryPluginValidExampleTarget
+                    $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift package --allow-writing-to-package-directory factory FactoryPluginValidExampleTarget
             -   name: test-factory 
                 # check that none of the generated .swift files have changed
                 run: | 
@@ -119,7 +119,7 @@ jobs:
                 run: | 
                     rm Examples/ValidExamples/*.swift
                     touch Examples/ValidExamples/Empty.swift
-                    swift package factory FactoryPluginValidExampleTarget
+                    swift package --allow-writing-to-package-directory factory FactoryPluginValidExampleTarget
             -   name: test-factory 
                 # check that none of the generated .swift files have changed
                 run: | 
