update for 08-30-a toolchain

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,8 @@
 {
-    "name": "swift-container",
+    "name": "swift-package-factory-container",
     "dockerComposeFile": "docker-compose.yml",
     "service": "swift",
-    "workspaceFolder": "/workspace",
+    "workspaceFolder": "/swift-package-factory",
     "remoteUser": "ec2-user",
     "extensions": 
     [
@@ -11,8 +11,8 @@
     "settings": 
     {
         // needed due to https://github.com/swift-server/vscode-swift/issues/365
-        "swift.path": "/home/ec2-user/.swiftenv/versions/DEVELOPMENT-SNAPSHOT-2022-08-24-a/usr/bin",
+        "swift.path": "/home/ec2-user/.swiftenv/versions/DEVELOPMENT-SNAPSHOT-2022-08-30-a/usr/bin",
         // needed to suppress vscode-swift warning
-        "lldb.library": "/home/ec2-user/.swiftenv/versions/DEVELOPMENT-SNAPSHOT-2022-08-24-a/usr/lib/liblldb.so"
+        "lldb.library": "/home/ec2-user/.swiftenv/versions/DEVELOPMENT-SNAPSHOT-2022-08-30-a/usr/lib/liblldb.so"
     }
 }
