--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.9"
 services:
     swift: 
-        image: swift-2022-08-24-a
+        image: swift-2022-08-30-a
         build:
             dockerfile: 'dockerfile'
         volumes:
-            - ..:/workspace
-        cap_add:
-            - NET_ADMIN
-        ports: 
-            - '80:80'
-            - '443:443'
+            - ..:/swift-package-factory
+        # cap_add:
+        #     - NET_ADMIN
+        # ports: 
+        #     - '80:80'
+        #     - '443:443'
